test/tex/codeblocksetup.tex.err

Error at "source" (line 14, column 17):
unexpected end of input
expecting \end{verbatim}
\end{codeblock}
                ^
